--- a/produktspesifikasjon/FKB-Bygning_5.1.1.adoc
+++ b/produktspesifikasjon/FKB-Bygning_5.1.1.adoc
@@ -1,11 +1,11 @@
 :datasett: FKB-Bygning
-:publisert: 2024-07-01
-:versjon: 5.1
+:publisert: 2025-02-14
+:versjon: 5.1.1
 :skjemaversjon: 5.1
-:versjon-forrige: 5.0
-:versjon-erstattet-av: 5.1
-:underversjon: 2024-07-01
-:underversjon-forrige: 2022-01-01
+:versjon-forrige: 5.1
+:versjon-erstattet-av: 5.1.1
+:underversjon: 2025-01-01
+:underversjon-forrige: 2024-07-01
 :metadata-url: https://kartkatalog.geonorge.no/metadata/fkb-bygning/8b4304ea-4fb0-479c-a24d-fa225e2c6e97
 :dokumentstatus: 1
 // All informasjon i hode over denne linja må fylles ut for hvert datasett. 
@@ -47,6 +47,7 @@ Tidligere versjoner:
 * FKB-Bygning versjon 4.6 - 2016-06-01
 * FKB-Bygning versjon 4.61 - 2017-05-01
 * FKB-Bygning versjon 5.0 - 2022-01-01
+* FKB-Bygning versjon 5.1 - 2024-07-01
 
 
 === Endringslogg
@@ -56,6 +57,11 @@ Tidligere versjoner:
 FKB 5.0 er en ny hovedversjon av FKB. Dette innebærer at det er gjort større endringer i standarden. Det vil ikke være tilstrekkelig å lese endringsloggen for å få et helhetlig bilde av FKB 5.0 produktspesifikasjonene. For å få et komplett bilde av produktspesifikasjonen må man lese dokumentasjonen som en helhet, inkludert de gjennomgående endringene som er beskrevet i FKB Generell del 5.0 <<FKB>>.
 
 Endringsloggene for det enkelte datasett har som ambisjonsnivå å beskrive de viktigste endringene når det gjelder datainnhold (objekttyper) siden forrige versjon. Endringsloggen vil ikke inneholde alle detaljerte endringer på egenskapsnivå eller endringer når det gjelder utvekslingsformat,  datamodellering eller lignende. 
+
+==== Endringer fra FKB-Bygning 5.1 til FKB-Bygning 5.1.1
+
+* Feilretting: Endret rollenavn for assosiasjon fra AnnenBygning til VeggFrittstående fra vedhengTrappFrittstående til vedhengVeggFrittstående
+
 
 ==== Endringer fra FKB-Bygning 5.0 til FKB-Bygning 5.1
 
